plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.myecommerce'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// JPA 사용을 위한 의존성 추가 (내부에 jdbc 관련 라이브러리를 포함 -> jdbc 의존성 따로 추가 필요x)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// 스프링 시큐리티 사용을 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// 필드에 대한 유효성검사 단순화를 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.1'
	// redis를 사용하기 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.4.1'
	// 회원 인증을 위해 JWT 토큰 사용 위한 의존성 추가
	implementation 'io.jsonwebtoken:jjwt:0.12.6'
	// 객체간 매핑을 위한 의존성 추가
	implementation 'org.mapstruct:mapstruct:1.6.3'
	// 설정파일의 속성값들의 암,복호화를 위한 의존성 추가
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'


	compileOnly 'org.projectlombok:lombok'

	annotationProcessor 'org.projectlombok:lombok'
	// 객체간 매핑을 위한 의존성 추가2
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	// mysql 드라이버 의존성 추가
	runtimeOnly 'com.mysql:mysql-connector-j'


	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// 테스트용 임베디드 Redis 서버 의존성 추가
	// commons-logging, slf4j-simple 기존 구현체들과 충돌로 제거
	testImplementation ('it.ozimov:embedded-redis:0.7.3') {
		exclude group: 'commons-logging', module: 'commons-logging'
		exclude group: 'org.slf4j', module: 'slf4j-simple'
	}

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
